<resources>
    <string name="app_name">Bd Jobs Careers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">https://www.bdjobscareers.com/</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_facebook">Facebook Page</string>
    <string name="action_apps">More Apps</string>
    <string name="update">Update this App</string>
    <string name="close">Exit App</string>
    <string name="home">Home</string>
    <string name="action_ratings">Rate this App</string>
    <string name="bankJob">Bank Jobs</string>
    <string name="partTimeJobs">Part Time Jobs</string>
    <string name="govtJob">Govt Jobs</string>
    <string name="allResult">All Results</string>
    <string name="hotJob">Newspaper Jobs</string>
    <string name="privateJobs">Private Jobs</string>
    <string name="newPaperJobs">Newspaper Jobs</string>
    <string name="jobResult">Job Results</string>
    <string name="careerTips">Career Tips</string>
    <string name="bdJobs">All Bd Jobs</string>
    <string name="allBdJobs">All Bd Jobs</string>
    <string name="bdJobsToday">BD Jobs Today</string>
    <string name="weeklyJobs">Weekly Jobs Circular</string>
    <string name="admitCard">Admit Card Download</string>
    <string name="teleTalk">Teletalk Application</string>
    <string name="suggestions">Suggestions</string>
    <string name="ok">Okay</string>

</resources>
