<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:icon="@mipmap/home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_facebook"
        android:orderInCategory="100"
        android:title="@string/action_facebook"
        app:showAsAction="never" />

    <item
        android:id="@+id/update"
        android:orderInCategory="100"
        android:title="@string/update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ratings"
        android:orderInCategory="100"
        android:title="@string/action_ratings"
        app:showAsAction="never" />


</menu>
